src/main/java/com/example/springsecurityregistration/web/error/UserNotFoundException.java
package com.example.springsecurityregistration.web.error;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException(String message) {
        super(message);
    }

}
